--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -51,9 +51,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\MyGame\Scripts\Enemy.cs" />
      <Compile Include="Assets\MyGame\Scripts\GameManager.cs" />
+     <Compile Include="Assets\MyGame\Scripts\Loader.cs" />
      <Compile Include="Assets\MyGame\Scripts\MapManager.cs" />
      <Compile Include="Assets\MyGame\Scripts\Player.cs" />
+     <Compile Include="Assets\MyGame\Scripts\Wall.cs" />
      <Compile Include="Assets\TutorialInfo\Scripts\Readme.cs" />
      <Compile Include="Assets\TutorialInfo\Scripts\TutorialInfo.cs" />
      <None Include="Assets\TutorialInfo\Fonts\LICENSE.txt" />
